; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_planner.c_FindNodesOfType.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_multi_logical_planner.c_FindNodesOfType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32* }
%struct.TYPE_4__ = type { i32*, i32* }

@NIL = common dso_local global i32* null, align 8
@T_Invalid = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @FindNodesOfType(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %14 = load i32*, i32** @NIL, align 8
  store i32* %14, i32** %6, align 8
  %15 = load i32, i32* @T_Invalid, align 4
  store i32 %15, i32* %7, align 4
  %16 = load i32*, i32** %4, align 8
  %17 = icmp eq i32* %16, null
  br i1 %17, label %18, label %20

18:                                               ; preds = %2
  %19 = load i32*, i32** @NIL, align 8
  store i32* %19, i32** %3, align 8
  br label %73

20:                                               ; preds = %2
  %21 = load i32*, i32** %4, align 8
  %22 = call i32 @CitusNodeTag(i32* %21)
  store i32 %22, i32* %7, align 4
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %5, align 4
  %25 = icmp eq i32 %23, %24
  br i1 %25, label %26, label %30

26:                                               ; preds = %20
  %27 = load i32*, i32** %6, align 8
  %28 = load i32*, i32** %4, align 8
  %29 = call i32* @lappend(i32* %27, i32* %28)
  store i32* %29, i32** %6, align 8
  br label %30

30:                                               ; preds = %26, %20
  %31 = load i32*, i32** %4, align 8
  %32 = call i64 @UnaryOperator(i32* %31)
  %33 = icmp ne i64 %32, 0
  br i1 %33, label %34, label %45

34:                                               ; preds = %30
  %35 = load i32*, i32** %4, align 8
  %36 = bitcast i32* %35 to %struct.TYPE_3__*
  %37 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %36, i32 0, i32 0
  %38 = load i32*, i32** %37, align 8
  store i32* %38, i32** %8, align 8
  %39 = load i32*, i32** %8, align 8
  %40 = load i32, i32* %5, align 4
  %41 = call i32* @FindNodesOfType(i32* %39, i32 %40)
  store i32* %41, i32** %9, align 8
  %42 = load i32*, i32** %6, align 8
  %43 = load i32*, i32** %9, align 8
  %44 = call i32* @list_concat(i32* %42, i32* %43)
  store i32* %44, i32** %6, align 8
  br label %71

45:                                               ; preds = %30
  %46 = load i32*, i32** %4, align 8
  %47 = call i64 @BinaryOperator(i32* %46)
  %48 = icmp ne i64 %47, 0
  br i1 %48, label %49, label %70

49:                                               ; preds = %45
  %50 = load i32*, i32** %4, align 8
  %51 = bitcast i32* %50 to %struct.TYPE_4__*
  %52 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %51, i32 0, i32 1
  %53 = load i32*, i32** %52, align 8
  store i32* %53, i32** %10, align 8
  %54 = load i32*, i32** %4, align 8
  %55 = bitcast i32* %54 to %struct.TYPE_4__*
  %56 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %55, i32 0, i32 0
  %57 = load i32*, i32** %56, align 8
  store i32* %57, i32** %11, align 8
  %58 = load i32*, i32** %10, align 8
  %59 = load i32, i32* %5, align 4
  %60 = call i32* @FindNodesOfType(i32* %58, i32 %59)
  store i32* %60, i32** %12, align 8
  %61 = load i32*, i32** %11, align 8
  %62 = load i32, i32* %5, align 4
  %63 = call i32* @FindNodesOfType(i32* %61, i32 %62)
  store i32* %63, i32** %13, align 8
  %64 = load i32*, i32** %6, align 8
  %65 = load i32*, i32** %12, align 8
  %66 = call i32* @list_concat(i32* %64, i32* %65)
  store i32* %66, i32** %6, align 8
  %67 = load i32*, i32** %6, align 8
  %68 = load i32*, i32** %13, align 8
  %69 = call i32* @list_concat(i32* %67, i32* %68)
  store i32* %69, i32** %6, align 8
  br label %70

70:                                               ; preds = %49, %45
  br label %71

71:                                               ; preds = %70, %34
  %72 = load i32*, i32** %6, align 8
  store i32* %72, i32** %3, align 8
  br label %73

73:                                               ; preds = %71, %18
  %74 = load i32*, i32** %3, align 8
  ret i32* %74
}

declare dso_local i32 @CitusNodeTag(i32*) #1

declare dso_local i32* @lappend(i32*, i32*) #1

declare dso_local i64 @UnaryOperator(i32*) #1

declare dso_local i32* @list_concat(i32*, i32*) #1

declare dso_local i64 @BinaryOperator(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
